@@ -11,6 +11,9 @@ What's New in Python 2.3 alpha 1?
 
 Type/class unification and new-style classes
 --------------------------------------------
+- int() now returns a long object if the argument is outside the
+  integer range, so int("4"*1000), int(1e200) and int(1L<<1000) will
+  all return long objects instead of raising an OverflowError.
 
 - Assignment to __class__ is disallowed if either the old or the new
   class is a statically allocated type object (such as defined by an
